welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:8: error: type mismatch;
 found   : Unit
 required: Boolean
	if(d()) 
            ^ZigZag:12: error: not found: value y
		setPos(x,y)
                         ^ZigZag:19: error: type mismatch;
 found   : Unit
 required: Boolean
	if(g()) {	
            ^ZigZag:23: error: not found: value y
		setPos(x,y)
                         ^ZigZag:33: error: not found: value Direction
	setDirection(Direction.EST)
                     ^ZigZag:34: error: not found: value x
	if (estFaceMur()) {setPos(x,y+1)}
                                  ^ZigZag:38: error: not found: value Direction
	setDirection(Direction.OUEST)
                     ^ZigZag:39: error: not found: value y
	if (estFaceMur) {setPos(0,y+1)}
                                  ^